--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,8 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:background="@color/colorPrimaryDark"
-                android:scaleType="fitXY">
-            </ImageView>
+                android:scaleType="fitXY"></ImageView>
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -80,5 +79,16 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
         android:src="@drawable/ic_edit_white" />
+
+    <Button
+        android:id="@+id/matchTracker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="118dp"
+        android:layout_marginBottom="8dp"
+        android:text="Match Tracker" />
+
 
 </RelativeLayout>
