--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,10 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="176dp"
         android:fontFamily="sans-serif-black"
-        android:text="Tennis App"
+        android:text="Tennis Vital-Fuse"
         android:textAlignment="center"
         android:textSize="60sp"
         android:textStyle="bold"
+        android:textColor="#555555"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
