AddPost Fixed,  & Visual edits

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,10 @@
     <color name="btnedit">#2CA7E0</color>
     <color name="neutral">#0a1b97</color>
     <color name="colordrawer">#2B2C2E</color>
+
+    <color name="tennis_ball_green">#FDF71F</color>
+    <color name="gold_yellow">#FCC201</color>
+    <color name="navy">#061D95</color>
+
+
 </resources>
