--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,21 +8,21 @@
 
     <TextView
         android:id="@+id/banner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Tennis App"
+        android:layout_width="408dp"
+        android:layout_height="334dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="serif"
         android:textAlignment="center"
+        android:textColor="#FFEB3B"
         android:textSize="60sp"
         android:textStyle="bold"
+        app:drawableTopCompat="@drawable/tennis"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <EditText
         android:id="@+id/email"
