--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -1,113 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:background="#000000"
-android:backgroundTint="#414141"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".RegisterUser">
-
-
-<TextView
-    android:id="@+id/banner"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="32dp"
-    android:fontFamily="serif"
-    android:text="Tennis Vital-Fuse"
-    android:textAlignment="center"
-    android:textSize="60sp"
-    android:textStyle="bold"
-    android:textColor="#FFEB3B"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="match_parent"
+    android:background="#000000"
+    android:backgroundTint="#414141"
+    tools:context=".RegisterUser">
 
-<EditText
-    android:id="@+id/fullName"
-    android:layout_width="312dp"
-    android:layout_height="53dp"
-    android:layout_marginTop="24dp"
-    android:hint="Full Name"
-    android:textSize="25sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.565"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/banner" />
 
-<EditText
-    android:id="@+id/password"
-    android:layout_width="299dp"
-    android:layout_height="64dp"
-    android:layout_marginTop="20dp"
-    android:hint="Password"
-    android:textSize="25sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/fullName" />
+    <TextView
+        android:id="@+id/banner"
+        android:layout_width="463dp"
+        android:layout_height="322dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="393dp"
+        android:fontFamily="serif"
+        android:textAlignment="center"
+        android:textColor="#FFEB3B"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        app:drawableTopCompat="@drawable/tennis"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<EditText
-    android:id="@+id/email"
-    android:layout_width="302dp"
-    android:layout_height="55dp"
-    android:layout_marginStart="61dp"
-    android:layout_marginTop="24dp"
-    android:layout_marginEnd="280dp"
-    android:layout_marginBottom="21dp"
-    android:hint="Email"
-    android:textSize="25sp"
-    app:layout_constraintBottom_toTopOf="@+id/age"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.015"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/password" />
+    <EditText
+        android:id="@+id/fullName"
+        android:layout_width="312dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="8dp"
+        android:hint="Full Name"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.565"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/banner" />
 
-<EditText
-    android:id="@+id/age"
-    android:layout_width="299dp"
-    android:layout_height="52dp"
-    android:layout_marginTop="20dp"
-    android:hint="Age"
-    android:textSize="25sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/email" />
+    <EditText
+        android:id="@+id/age"
+        android:layout_width="299dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="12dp"
+        android:hint="Age"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
-<Button
-    android:id="@+id/registerUser"
-    android:layout_width="185dp"
-    android:layout_height="65dp"
-    android:layout_marginStart="114dp"
-    android:layout_marginEnd="112dp"
-    android:layout_marginBottom="60dp"
-    android:text="REGISTER USER"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/registerUser"
+        android:layout_width="185dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="114dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="112dp"
+        android:text="REGISTER USER"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/age" />
 
-<ProgressBar
-    android:id="@+id/progressBar"
-    style="?android:attr/progressBarStyle"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:visibility="gone"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    />
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="302dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="280dp"
+        android:layout_marginBottom="21dp"
+        android:hint="Email"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/age"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="299dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="12dp"
+        android:hint="Password"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fullName" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
