--- a/app/src/main/res/layout/row_users.xml
+++ b/app/src/main/res/layout/row_users.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imagep"
+            android:id="@+id/avatarIv"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/profile_image" />
@@ -30,14 +30,16 @@
             android:orientation="vertical">
 
             <TextView
+
                 android:id="@+id/namep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Person NAme"
+                android:text="Person Name"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp" />
 
             <TextView
+
                 android:id="@+id/emailp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
