--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/nav_addblogs"
         android:icon="@drawable/ic_add"
-        android:title="Add Blogs" />
+        android:title="Add Post" />
 
     <item
         android:id="@+id/nav_chat"
